[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[project]
name = "wechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "httpx[http2,http3]>=0.28.1",
    "jieba>=0.42.1",
    "keybert>=0.9.0",
    "markdown>=3.8",
    "markdownify>=1.1.0",
    "nltk>=3.9.1",
    "openai>=1.75.0",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.14.3",
    "pypinyin>=0.54.0",
    "python-levenshtein>=0.27.1",
    "python-slugify>=8.0.4",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.6.1",
    "tomlkit>=0.13.2",
]
